--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,9 @@
 {
+  "UseInMemoryCache": true,
+  "UseRedisCache": false,
   "UseInMemoryDatabase": true,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDbCacheTest;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
