--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "UseInMemoryDatabase": true,
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb123;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -15,5 +15,13 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAD": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "jacalvaraadtest1.onmicrosoft.com",
+    "TenantId": "7e511586-66ec-4108-bc9c-a68dee0dc2aa",
+    "ClientId": "bac81cbb-9fab-4a4e-9521-be07290c3a51",
+    "ClientSecret": "bac81cbb-9fab-4a4e-9521-be07290c3a51",
+    "CallbackPath": "/signin-oidc"
+  }
 }
